завершаем базовую стилизацию

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<header class="header">
 			<div class="top-line">
 				<a class="logo logo-header">
-					<img src="img/logo.svg" width="109" height="19" alt="Логотип магазина «Техномарт»">
+					<img src="img/logo.svg" width="108" height="18" alt="Логотип магазина «Техномарт»">
 				</a>
 				<p class="user-nav">
 					<!--здесь будет форма поиска-->
@@ -25,7 +25,7 @@
 				Интернет-магазин строительных материалов и инструментов для ремонта
 			</p>
 			<div class="header-contacts">
-				<a href="tel:+78125550555">+7(812) 555-05-55</a>
+				<a href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
 			<div class="login-block">
@@ -62,9 +62,9 @@
 						</div>
 					</div>
 					<div class="slider"><!--тут слайдер-->
-						<img src="img/slider-dril.jpg" width="620" height="266" alt="Открыть каталог дрелей - на все случаи">
 						<img src="img/slider-perfo.jpg" width="620" height="266" alt="Открыть каталог перфораторов - настоящие мужские игрушки">
-					</div>
+						<img src="img/slider-dril.jpg" width="620" height="266" alt="Открыть каталог дрелей - на все случаи">
+					</div>   
 				</div>	
 				<div class="promo-right">
 					<div class="promo-block machine">
@@ -96,21 +96,21 @@
 					<li class="product-item panel">
 						<div class="item-face">
 							<a href="#" class="product-image">
-								<img src="img/perforator_1_index.jpg" alt="Перфоратор BOSCH BFG 9000" width="218" height="170" >
+								<img src="img/perforator_1_index.jpg" alt="Перфоратор BOSCH BFG 9000">
 							</a>
 							<div class="item-actions visually-hidden">
 								<a class="btn button-buy" href="">Купить</a>
 								<a class="btn button-bookmark" href="">В закладки</a>
 							</div>
 						</div>
-						<h3 class="item-name">Перфоратор BOSCH<br>BFG 9000</h3>
+						<h3 class="item-name">Перфоратор BOSCH<br class="test">BFG 9000</h3>
 						<span class="crossed">32500 Р.</span>
 						<a class="btn button-price" href="">25500 Р.</a>
 					</li>
-					<li class="product-item panel">
+					<li class="product-item panel new">
 						<div class="item-face">
-							<a href="#" class="product-image">
-								<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+							<a href="#" class="product-image bosch-3000">
+								<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000">
 							</a>
 							<div class="item-actions visually-hidden">
 								<a class="btn button-buy" href="">Купить</a>
@@ -118,13 +118,13 @@
 							</div>
 						</div>
 						<h3 class="item-name">Перфоратор BOSCH<br>BFG 3000</h3>
-						<span class="crossed">25500 Р.</span>
+						<span class="crossed">22500 Р.</span>
 						<a class="btn button-price" href="">15500 Р.</a>
 					</li>
 					<li class="product-item panel">
 						<div class="item-face">
 							<a href="#" class="product-image">
-								<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" >
+								<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000">
 							</a>
 							<div class="item-actions visually-hidden">
 								<a class="btn button-buy" href="">Купить</a>
@@ -137,8 +137,8 @@
 					</li>
 					<li class="product-item panel new">
 						<div class="item-face">
-							<a href="#"  class="product-image">
-								<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170" >
+							<a href="#"  class="product-image bosch-3000">
+								<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 2000">
 							</a>
 							<div class="item-actions visually-hidden">
 								<a class="btn button-buy" href="" >Купить</a>
@@ -215,10 +215,10 @@
 					<li class="services-item">
 						<button type="button" class="button-service">Гарантия</button>
 						<h3 class="visually-hidden service-title">Гарантия</h3>
-						<p class="visually-hidden service-desc text">Если купленный у нас товар поломается или заискрит,<br>
-						а также в случае пожара, спровоцированного его возгоранием,<br>
-						вы всегда можете быть уверенны в нашей гарантии. Мы обменяем<br>
-						сгоревший товар на новый.<br>
+						<p class="visually-hidden service-desc text">Если купленный у нас товар поломается или заискрит,
+						а также в случае пожара, спровоцированного его возгоранием,
+						вы всегда можете быть уверенны в нашей гарантии. Мы обменяем
+						сгоревший товар на новый.
 						Дом уж восстановите как-нибудь сами.</p>
 					</li>
 					<li class="services-item">
@@ -227,7 +227,7 @@
 						<p class="visually-hidden service-desc text">
 							Залезать в долговую яму стало проще!<br>
 							Кредитные консультанты придут вам на помощь.
-							<a href="#">Отправить заявку</a>
+							<a href="#" class="button-credit">Отправить заявку</a>
 						</p>
 					</li>
 				</ul>
@@ -241,7 +241,7 @@
 					<ul class="info-list">
 						<li class="info-item">Деловые линии</li>
 						<li class="info-item">Автотрейдинг</li>
-						<li class="info-item">ЖелДорЭкспедиця</li>
+						<li class="info-item">ЖелДорЭкспедиция</li>
 					</ul>
 					<a href="about.html" class="btn button" >Подробнее о компании</a>
 				</div>
@@ -281,9 +281,9 @@
 			<div class="copyrights">
 				<p>© 2010–2020 Компания «Техномарт»<br>Все права защищены</p>
 				<ul class="social-links">
-					<li><a href="#"><!--здесь иконка ссылки--></a></li>
-					<li><a href="#"><!--здесь иконка ссылки--></a></li>
-					<li><a href="#"><!--здесь иконка ссылки--></a></li>
+					<li><a href="#">мы ВКонтакте<!--здесь иконка ссылки--></a></li>
+					<li><a href="#">мы на Фэйсбук<!--здесь иконка ссылки--></a></li>
+					<li><a href="#">мы в Инстаграм<!--здесь иконка ссылки--></a></li>
 				</ul>
 				<p>Обратная связь:<br>
 					<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
@@ -293,7 +293,7 @@
 				</p>
 			</div>
 		</footer>
-		<section class="write-us visually-hidden">
+		<section class="write-us pop-up-shadow">
 			<h3 class="visually-hidden">Напишите нам</h3>
 			<form action="https://echo.htmlacademy.ru" method="post" id="write-us">
 				<button type="button" class="close-button">Закрыть</button>
@@ -316,21 +316,21 @@
 					</label>
 				</p>
 				<div class="button-area">
-					<button type="submit" class="btn button">Отправить</button>
+					<button type="submit" class="btn button button-write-us">Оформить заказ</button>
 				</div>
 			</form>
 		</section>
-		<section class="visually-hidden">
+		<section class="on-the-map pop-up-shadow">
 			<h3 class="visually-hidden">Мы на карте</h3>
 			<p>
 				<a href="https://goo.gl/maps/2jp96kD98UYUD67X8">
-					<img src="img/map-big.png" alt="Адрес офиса: г.Санкт-Петербург, ул. Большая Конюшенная, 19/8" width="940" height="446">
+					<img class="map-big" src="img/map-big.png" alt="Адрес офиса: г.Санкт-Петербург, ул. Большая Конюшенная, 19/8" width="940" height="446">
 				</a>
 			</p>
 			<button type="button" class="close-button">Закрыть</button>
 		</section>
-		<section class="item-added visually-hidden">
-			<h3 class="section-title modal-title">Товар добавлен в корзину!</h3>
+		<section class="item-added pop-up-shadow">
+			<h3 class="modal-title">Товар добавлен в корзину!</h3>
 			<div class="button-area">
 				<a href="#" class="btn button">Оформить заказ</a>
 				<button class="btn button button-resume">Продолжить покупки</button>
