--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
 				Интернет-магазин строительных материалов и инструментов для ремонта
 			</p>
 			<div class="header-contacts">
-				<a href="tel:+78125550555">+7(812) 555-05-55</a>
+				<a href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
 			<div class="login-block">
@@ -104,11 +104,11 @@
 							</li>
 							<li>
 								<input type="radio" name="power" value="net" id="net" disabled>
-								<label for="net">Сеть</label>
+								<label for="net">Сетевые</label>
 							</li>
 						</ul>
 					</fieldset>
-					<button class="btn button-action" type="button">Показать</button>
+					<button class="btn button-action filter-show" type="button">Показать</button>
 				</form>
 			</div>	
 			<div class="sort-section">
@@ -126,7 +126,7 @@
 						<li class="product-item panel">
 							<div class="item-face">
 								<a href="" class="product-image">
-									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" >
+									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -134,15 +134,15 @@
 								</div>
 							</div>
 							<a href="">
-								<h3 class="item-name">Перфоратор BOSCH<br>BFG 3000</h3>
+								<h3 class="item-name"><p>Перфоратор BOSCH</p><br><p>BFG 6000</p></h3>
 							</a>
-							<span class="crossed">22500 Р.</span>
-							<a class="btn button-price" href="">15500 Р.</a>
+							<span class="crossed">30500 Р.</span>
+							<a class="btn button-price" href="">25500 Р.</a>
 						</li>
 						<li class="product-item panel">
 							<div class="item-face">
 								<a href="" class="product-image">
-									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" >
+									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -158,7 +158,7 @@
 						<li class="product-item panel new">
 							<div class="item-face">
 								<a href="" class="visually-hidden product-image">
-									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="auto" height="auto">
 								</a>
 								<div class="item-actions">
 									<a class="btn button-buy" href="">Купить</a>
@@ -166,15 +166,15 @@
 								</div>
 							</div>
 							<a href="">
-								<h3 class="item-name">Перфоратор BOSCH<br>BFG 2000</h3>
+								<h3 class="item-name">Перфоратор BOSCH<br>BFG 6000</h3>
 							</a>
-							<span class="crossed"></span>
-							<a class="btn button-price" href="">12500 Р.</a>
+							<span class="crossed">30500 Р.</span>
+							<a class="btn button-price" href="">25500 Р.</a>
 						</li>
-						<li class="product-item panel">
+						<li class="product-item panel new">
 							<div class="item-face">
-								<a href="" class="product-image">
-									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" >
+								<a href="" class="product-image bosch-3000">
+									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000" width="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -185,10 +185,10 @@
 							<span class="crossed">22500 Р.</span>
 							<a class="btn button-price" href="">15500 Р.</a>
 						</li>
-						<li class="product-item panel new">
+						<li class="product-item panel">
 							<div class="item-face">
 								<a href="" class="product-image">
-									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" >
+									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -199,10 +199,10 @@
 							<span class="crossed">30500 Р.</span>
 							<a class="btn button-price" href="">25500 Р.</a>
 						</li>
-						<li class="product-item panel">
+						<li class="product-item panel new">
 							<div class="item-face">
-								<a href="" class="product-image">
-									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170" >
+								<a href="" class="product-image bosch-3000">
+									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 2000" width="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -215,8 +215,8 @@
 						</li>
 						<li class="product-item panel new">
 							<div class="item-face">
-								<a href="" class="product-image">
-									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" >
+								<a href="" class="product-image bosch-3000">
+									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000" wiwidth="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -230,7 +230,7 @@
 						<li class="product-item panel">
 							<div class="item-face">
 								<a href="" class="product-image">
-									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" >
+									<img src="img/perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000" width="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -241,10 +241,10 @@
 							<span class="crossed">30500 Р.</span>
 							<a class="btn button-price" href="">25500 Р.</a>
 						</li>
-						<li class="product-item panel">
+						<li class="product-item panel new">
 							<div class="item-face">
-								<a href="" class="product-image">
-									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+								<a href="" class="product-image bosch-3000">
+									<img src="img/perforator_1.jpg" alt="Перфоратор BOSCH BFG 2000" width="auto" height="auto">
 								</a>
 								<div class="item-actions visually-hidden">
 									<a class="btn button-buy" href="">Купить</a>
@@ -265,7 +265,7 @@
 				</section>
 			</div>
 			<section class="page-desc">
-				<h2 class="section-title">Пара сло  в о перфораторах</h2>
+				<h2 class="section-title">Пара слов о перфораторах</h2>
 				<p class="text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
 			</section>
 		</main>
@@ -298,9 +298,9 @@
 					Все права защищены
 				</p>
 				<ul class="social-links">
-					<li><a href="#"><!--CSS сюда иконку как-то подтягивать?--></a></li>
-					<li><a href="#"><!--CSS сюда иконку как-то подтягивать?--></a></li>
-					<li><a href="#"><!--CSS сюда иконку как-то подтягивать?--></a></li>
+					<li><a href="#">мы ВКонтакте<!--здесь иконка ссылки--></a></li>
+					<li><a href="#">мы на Фэйсбук<!--здесь иконка ссылки--></a></li>
+					<li><a href="#">мы в Инстаграм<!--здесь иконка ссылки--></a></li>
 				</ul>
 				<p>Обратная связь:<br>
 					<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
@@ -310,11 +310,11 @@
 				</p>
 			</div>
 		</footer>
-		<section class="item-added visually-hidden">
-			<h3 class="section-title modal-title">Товар добавлен в корзину!</h3>
+		<section class="item-added pop-up-shadow">
+			<h3 class="modal-title">Товар добавлен в корзину!</h3>
 			<div class="button-area">
 				<a href="#" class="btn button">Оформить заказ</a>
-				<button class="btn button-resume">Продолжить покупки</button>
+				<button class="btn button button-resume">Продолжить покупки</button>
 			</div>
 			<button type="button" class="close-button">Закрыть</button>
 		</section>
